Fix header on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,7 @@ a:hover   { color: #f06; }
 .header {
   font-family: 'Delius', cursive;
   margin-bottom: 2em;
-  height: 2em;
+  min-height: 2em;
 }
 header a {
   text-decoration: none;
